[package]
name = "molla"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
serde = { version = "1.0.136", features = ["derive"] }
sled = "0.34.7"
actix-web = "4.1.0"
regex = "1.6.0"
hex = "0.4.3"
ed25519 = "1.5.2"
scraper = "0.13.0"
handlebars = "4.3.3"
figment = { version = "0.10.6", features=["env", "toml"] }
once_cell = "1.13.1"
chrono = "0.4.22"
