[package]
name = "molla"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4"
ammonia = "3.2.1"
anyhow = "1.0.62"
chrono = { version = "0.4.22", features = ["serde"] }
dashmap = "5.3.4"
ed25519-compact = "1.0.11"
figment = { version = "0.10.6", features = ["env", "toml"] }
handlebars = "4.3.3"
hex = "0.4.3"
iter_tools = "0.1.4"
once_cell = "1.13.1"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd", "serde"] }
regex = "1.6.0"
reqwest = "0.11.11"
scraper = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.83"
sled = "0.34.7"
tokio = { version = "1.20.1", features = ["time"] }
